tests/vendor/invalid/semantics/assign_value_to_function.c
//tags: functions
int main() {
    int x();
    x = 3;
    return 0;
}